java/monitor/src/main/resources/templateIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: placeholder-ingressname
  namespace: placeholder-namespace
  ownerReferences:
    - apiVersion: theia.cloud/v3beta
      kind: AppDefinition
      name: placeholder
      uid: placeholder
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-ingress-class: nginx
    nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header 'X-Forwarded-Uri' $request_uri;
spec:
  tls: 
  - hosts:
    - placeholder-host
    secretName: ws-cert-secret
  rules:
    - host: placeholder-host
      http:
        # paths:
        #   - path: /
        #     pathType: Prefix
        #     backend:
        #       service:
        #         name: nginx-ok-service
        #         port:
        #           number: 80
